fixed scroll spacing

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -256,7 +256,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 	margin: auto;
 	filter: progid:DXImageTransform .Microsoft .Alpha(Opacity=60);
 	opacity: 0.6;
-}*/
+}
 
 strong {
 	font-family: "Abril Fatface", serif;
@@ -671,13 +671,14 @@ body > section > .holder > .title h2:after {
 
 .rw-words{
 	display: inline-block;
-	/*min-width: 180px;
-	min-height: 29px;*/
+	min-width: 180px;
+	min-height: 29px;
 	text-align: left;
-	margin-left: -10px;
+	margin-left: 10px;
 	vertical-align: baseline;
-	animation: inherit;
-	padding: 1em;
+	animation: relative;
+	padding-bottom: 23px;
+	position: absolute;
 }
 .rw-words-1 span{
 	color: #f91791;
@@ -1747,18 +1748,18 @@ circle skills
 
 
 
-#about .experience .row {
+.experience .row {
 	margin-top: 30px;
 	padding: 0 0 40px 0;
 	overflow: hidden;
 }
 
-#about .experience .row + .row {
+.experience .row + .row {
 	border-top: 1px solid #ccc;
 	padding: 40px 0;
 }
 
-#about .experience .row img {
+.experience .row img {
 	margin: 0 0 0 350px;
 	/*margin-left: 100px;
 	margin-right: 100px;*/
@@ -1766,18 +1767,18 @@ circle skills
 	/*float: left;*/
 }
 
-#about .experience .row .brief {
+.experience .row .brief {
 	/*padding-left: 10px;
 	padding-right: 80px;*/
 }
 
-#about .experience .row .brief .company-name {
+.experience .row .brief .company-name {
 	font-family: "Abril Fatface", serif;
 	font-size: 24px;
 
 }
 
-#about .experience .row .brief .position {
+.experience .row .brief .position {
 	/*font-family: "Audrey-Normal", monospace;*/
 	font-family: "Abril Fatface", serif;
 	color: #f91791;
@@ -1787,11 +1788,11 @@ circle skills
 	text-align: center;
 }
 
-#about .experience .row .brief span {
+.experience .row .brief span {
 	display: block;
 	/*font-family: "Vidaloka", monospace;*/
 }
-#about .experience .row .brief li {
+.experience .row .brief li {
 	list-style: circle;
 	margin-left: 150px;
 	margin-right: 175px;
@@ -1802,10 +1803,6 @@ circle skills
 	/*font-family: "Vidaloka", monospace;*/
 
 }
-
-
-
-
 
 .education .row {
 	margin-top: 150px;
@@ -2373,169 +2370,7 @@ margin: 0 auto;
 position: relative;
 }
 
-#resume .ch-grid {
-	margin-top: 30px;
-	margin: 20px 0 0 0;
-	padding: 0;
-	list-style: none;
-	display: block;
-	text-align: center;
-	width: 100%;
-}
 
-#resume .ch-grid:after,
-#resume .ch-item:before {
-	content: '';
-    display: table;
-}
-
-#resume .ch-grid:after {
-	clear: both;
-}
-
-#resume .ch-grid li {
-	width: 220px;
-	height: 220px;
-	display: inline-block;
-	margin: 20px;
-}
-#resume .ch-item {
-	width: 100%;
-	height: 100%;
-	border-radius: 50%;
-	position: relative;
-	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-	cursor: default;
-}
-#resume .ch-box {
-	width: 100%;
-	height: 100%;
-	/*border-radius: 50%;*/
-	position: relative;
-	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-	cursor: default;
-}
-#resume .ch-info-wrap{
-	position: absolute;
-	width: 180px;
-	height: 180px;
-	border-radius: 50%;
-	-webkit-perspective: 800px;
-	-moz-perspective: 800px;
-	-o-perspective: 800px;
-	-ms-perspective: 800px;
-	perspective: 800px;
-	-webkit-transition: all 0.4s ease-in-out;
-	-moz-transition: all 0.4s ease-in-out;
-	-o-transition: all 0.4s ease-in-out;
-	-ms-transition: all 0.4s ease-in-out;
-	transition: all 0.4s ease-in-out;
-	top: 20px;
-	left: 20px;
-	/*background: #f9f9f9 url(../images/1167.png);*/
-	box-shadow:
-	0 0 0 20px rgba(255,255,255,0.2),
-	inset 0 0 3px rgba(115,114, 23, 0.8);
-
-}
-
-
-#resume .ch-info{
-	position: absolute;
-	width: 180px;
-	height: 180px;
-	border-radius: 50%;
-	transition: all 0.4s ease-in-out;
-	transform-style: preserve-3d;
-}
-
-#resume .ch-info > div {
-	display: block;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	border-radius: 50%;
-	background-position: center center;
-	backface-visibility: hidden;
-}
-
-#resume .ch-info .ch-info-back {
-	transform: rotate3d(0,1,0,180deg);
-	background: #000;
-}
-#resume .ch-info{
-	position: absolute;
-	width: 180px;
-	height: 180px;
-	border-radius: 50%;
-
-	-webkit-transition: all 0.4s ease-in-out;
-	-moz-transition: all 0.4s ease-in-out;
-	-o-transition: all 0.4s ease-in-out;
-	-ms-transition: all 0.4s ease-in-out;
-	transition: all 0.4s ease-in-out;
-
-	-webkit-transform-style: preserve-3d;
-	-moz-transform-style: preserve-3d;
-	-o-transform-style: preserve-3d;
-	-ms-transform-style: preserve-3d;
-	transform-style: preserve-3d;
-
-}
-
-
-#resume .ch-info h3 {
-	color: #fff;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	font-size: 14px;
-	margin: 0 15px;
-	padding: 40px 0 0 0;
-	height: 90px;
-	font-family: 'Open Sans', Arial, sans-serif;
-	text-shadow:
-		0 0 1px #fff,
-		0 1px 2px rgba(0,0,0,0.3);
-}
-
-#resume .ch-info p {
-	color: #fff;
-	padding: 10px 5px;
-	font-style: italic;
-	margin: 0 30px;
-	font-size: 12px;
-	border-top: 1px solid rgba(255,255,255,0.5);
-}
-
-#resume .ch-info p a {
-	display: block;
-	color: rgba(255,255,255,0.7);
-	font-style: normal;
-	font-weight: 700;
-	text-transform: uppercase;
-	font-size: 9px;
-	letter-spacing: 1px;
-	padding-top: 4px;
-	font-family: 'Open Sans', Arial, sans-serif;
-}
-
-#resume .ch-info p a:hover {
-	color: rgba(255,242,34, 0.8);
-}
-
-#resume .ch-item:hover .ch-info-wrap {
-	box-shadow:
-		0 0 0 0 rgba(255,255,255,0.8),
-		inset 0 0 3px rgba(115,114, 23, 0.8);
-}
-
-#resume .ch-item:hover .ch-info {
-	transform: rotate3d(0,1,0,-180deg);
-}
-#resume strong{
-	color: #f91791;
-	font-family: 'Abril Fatface', serif;
-}
 /*{
 	margin:0;
 	padding:0;
@@ -2545,7 +2380,7 @@ position: relative;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }*/
-.project {
+/*.project {
 	padding: 0;
   margin: 0;
   list-style: none;
@@ -2556,7 +2391,7 @@ position: relative;
   display: flex;
   -webkit-flex-flow: row wrap;
   justify-content: space-around;
-}
+}*/
 .gallery_containers {
 	margin-top: 30px;
 	margin: 20px 0 0 0;
@@ -2566,16 +2401,6 @@ position: relative;
 	text-align: center;
 	width: 100%;
 }
-
-/*.gallery_container:after,*/
-/*.gallery_containers:before {
-	content: '';
-    display: table;
-}
-
-.gallery_containers:after {
-	clear: both;
-}*/
 
 .gallery_containers li {
 	width: 220px;
@@ -2592,8 +2417,6 @@ position: relative;
 	border: 1px solid #2a2a2a;
 	position: relative;
 }
-
-
 
 .gallery_container img {
 	display: block;
@@ -2624,7 +2447,6 @@ position: relative;
 	display: block;
 	font-size: 16px;
 }
-
 
 /*.project .button{
 	font-family: 'Abril Fatface', serif;
@@ -3289,18 +3111,18 @@ span5:hover{
 			padding: 0 0 150px 0;
 		}
 
-		#about .experience .row .logo {
+		.experience .row .logo {
 			float: none;
 		}
 
-		#about .education .row .brief {
+		.education .row .brief {
 			padding: 15px 0 0 0;
 		}
-		#about .education .row .logo {
+		 .education .row .logo {
 			float: none;
 		}
 
-		#about .experience .row .brief {
+		.experience .row .brief {
 			padding: 15px 0 0 0;
 		}
 
